--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -26,7 +26,7 @@
             <span class="mbox-text-span">The XOWA Android app is on the Google Play Store.</span>
           </p>
           <p>
-            <span class="mbox-text-span">Please try it out! See: <a href="https://play.google.com/store/apps/details?id=org.xowa" rel="nofollow" class="external free">https://play.google.com/store/apps/details?id=org.xowa</a></span>
+            <span class="mbox-text-span">Please try it out! <a href="https://play.google.com/store/apps/details?id=org.xowa" rel="nofollow" class="external free">https://play.google.com/store/apps/details?id=org.xowa</a></span>
           </p>
         </td>
       </tr>
@@ -82,20 +82,20 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.8.2.1 features the following:
+      v3.8.5.1 features the following:
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2016-07 Polish Wiktionary, Wikisource, Wikiquote, Wikibooks, Wikiversity, and Wikinews
+        (Wiki) Publish 2016-08 English Wikipedia and German Wikipedia
       </li>
       <li>
-        (PC) Fix random "SSL peer shut down incorrectly" when downloading database dumps
+        (PC / Android) Better html database support for packed galleries, video thumbnails, and image maps
       </li>
       <li>
-        (PC) Fix "Script error:Module:Effective protection expiry" for many English Wikipedia pages
+        (PC) Support the lsth parser function
       </li>
       <li>
-        (PC) Fix parser issues for Polish Wikipedia pages, including location maps and broken infoboxes
+        (PC) Add torrent link / MD5 info to the Download Central Info page
       </li>
     </ul>
     <p>
