--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -468,7 +468,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_18" title="Options/Content apps">Content Apps</a>
+              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_18" title="Options/Content apps" class="xowa-visited">Content Apps</a>
             </td>
             <td>
               Content applications (web browser, image viewer, media player)
