--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-08-29</b> English Wikipedia and German Wikipedia updated<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+  </ul>
+
   <b>2016-08-08</b> Polish Wikis updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_plwiki_latest" class="external text" rel="nofollow">Polish wikis</a>
@@ -122,30 +130,6 @@
   <b>2016-06-19</b> English wikis updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-  </ul>
-
-  <b>2016-04-24</b> German wikis updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German wikis</a>
-    </li>
-  </ul>
-
-  <b>2016-04-16</b> XOWA app released on Google Play<br/>
-  <ul>
-    <li> <a href="https://play.google.com/store/apps/details?id=org.xowa" class="external text" rel="nofollow">XOWA Android app</a>
-    </li>
-  </ul>
-
-  <b>2016-04-04</b> French Wikipedia 2016-03 update released<br/>
-  <ul>
-    <li> <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2016-03-05_file_update.7z" class="external text" rel="nofollow">French Wikipedia update</a>
-    </li>
-  </ul>
-
-  <b>2016-03-20</b> English Wikipedia 2016-03 update released<br/>
-  <ul>
-    <li> <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_file_v2b.7z" class="external text" rel="nofollow">English Wikipedia update</a>
     </li>
   </ul>
 </td>
