--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -152,13 +152,83 @@
       </tr>
       <tr>
         <td>
+          cs.wikibooks.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-08-29
+        </td>
+        <td class='cell_center'>
+          2015-08-05
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("cs.wikibooks.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("cs.wikibooks.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("cs.wikibooks.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          cs.wikinews.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-09-01
+        </td>
+        <td class='cell_center'>
+          2015-08-06
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("cs.wikinews.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("cs.wikinews.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("cs.wikinews.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           cs.wikipedia.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2016-08-01
+          2016-09-01
         </td>
         <td class='cell_center'>
           2015-08-06
@@ -187,36 +257,142 @@
       </tr>
       <tr>
         <td>
-          cs.wikipedia_old.org
+          cs.wikiquote.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-08-31
         </td>
         <td class='cell_center'>
+          2015-08-05
         </td>
         <td class='cell_center'>
-          &lt;&lt;NULL&gt;&gt;
+          Dump complete
         </td>
         <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
+          sqlite3
         </td>
         <td class='cell_center'>
           v2
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("cs.wikipedia_old.org")'>Import</button>
+          v1
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("cs.wikipedia_old.org")'>Category</button>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("cs.wikiquote.org")'>Import</button>
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("cs.wikipedia_old.org")'>Search</button>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("cs.wikiquote.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("cs.wikiquote.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          cs.wikisource.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-09-01
+        </td>
+        <td class='cell_center'>
+          2015-08-05
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("cs.wikisource.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("cs.wikisource.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("cs.wikisource.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          cs.wikiversity.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-08-31
+        </td>
+        <td class='cell_center'>
+          2015-08-06
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("cs.wikiversity.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("cs.wikiversity.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("cs.wikiversity.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          cs.wiktionary.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-09-01
+        </td>
+        <td class='cell_center'>
+          2015-08-05
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("cs.wiktionary.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("cs.wiktionary.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("cs.wiktionary.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -716,7 +892,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-06-01
+          2016-09-01
         </td>
         <td class='cell_center'>
           2015-08-06
@@ -925,7 +1101,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-08-02
+          2016-08-21
         </td>
         <td class='cell_center'>
           2015-08-05
