--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -360,9 +360,9 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 518.310 KB
-file count: 105
-oldest file: 2016-08-27 11:41:54
+space used: 2.327 MB
+file count: 306
+oldest file: 2016-09-01 21:21:00
 </textarea>
             </td>
           </tr>
