--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -181,7 +181,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
@@ -203,7 +203,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Design/Language_files.html" id="xolnki_29" title="Dev/Design/Language files">Language files</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_30" title="App/UI/Menus">Menu configuration</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_30" title="App/UI/Menus" class="xowa-visited">Menu configuration</a>
             </li>
           </ul>
         </td>
