--- a/home/wiki/Dev/Command-line/Thumbs.html
+++ b/home/wiki/Dev/Command-line/Thumbs.html
@@ -371,7 +371,7 @@ app.bldr.cmds {
   // create an "image" table to get the metadata for all files in the current wiki
   add     ('simple.wikipedia.org' , 'wiki.image');
 
-  // create an "imagelinks" table to find out which images are used for the wiki (performance optimization)
+  // create an "imagelinks" table to find out which images are used for the wiki
   add     ('simple.wikipedia.org' , 'wiki.imagelinks');
 
   // parse all page-to-page links
