--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -606,6 +606,40 @@
       </tr>
       <tr>
         <td>
+          nethackwiki_current.xml
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-08-27
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nethackwiki_current.xml")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nethackwiki_current.xml")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nethackwiki_current.xml")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           pl.wikibooks.org
         </td>
         <td class='cell_center'>
@@ -892,7 +926,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-09-01
+          2016-06-01
         </td>
         <td class='cell_center'>
           2015-08-06
